@@ -266,7 +266,21 @@
 	</para>
       </listitem>
     </varlistentry>
+-->
 
+    <varlistentry>
+      <term>
+	<option>--stats-data</option>
+      </term>
+      <listitem>
+	<para>
+	  Output realtime operating statistics on STDOUT. Useful for 
+	  updating an external control system.
+	</para>
+      </listitem>
+    </varlistentry>
+
+<!--
     <varlistentry>
       <term>
 	<option>- -server-script-down=</option><replaceable>cmd</replaceable>
